--- a/userChrome.css
+++ b/userChrome.css
@@ -1,7 +1,8 @@
 /* Firefox navigation/toolbar... */
 #nav-bar {
   height: 29px !important;
-  padding: 0 2px !important;
+  padding-right: 2px !important;
+  vertical-align: bottom;
 }
 
 /* Fix spacing around nav/toolbar buttons... */
@@ -11,6 +12,10 @@
 }
 
 /* Navigation/toolbar buttons... */
+#nav-bar {
+  margin-top: 1px !important;
+}
+
 #nav-bar toolbarbutton,
 #nav-bar toolbaritem {
   border: none !important;
@@ -26,7 +31,7 @@
 
 /* Vertically centre tab bar text */
 .tab-label-container {
-  margin-top: -1px !important;
+  margin-top: -2px !important;
 }
 
 /* Remove padding from tab bars... */
@@ -62,7 +67,98 @@
   width: 12px !important;
 }
 
-/* Remove extra padding from bookmarks toolbar... */
-#PersonalToolbar {
-  margin-top: -1px !important;
+/* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/tabs_on_bottom_v2.css made available under Mozilla Public License v. 2.0
+See the above repository for updates as well as full license text. */
+
+/* This reorders toolbar to place tabs below other toolbars. Requires Firefox 133+ */
+
+@media (-moz-bool-pref: "userchrome.force-window-controls-on-left.enabled"){
+  #nav-bar > .titlebar-buttonbox-container{
+    order: -1 !important;
+    > .titlebar-buttonbox{
+      flex-direction: row-reverse;
+    }
+  }
 }
+@media not (-moz-bool-pref: "sidebar.verticalTabs"){
+  .global-notificationbox,
+  #tab-notification-deck,
+  #TabsToolbar{
+    order: 1;
+  }
+  #TabsToolbar > :is(.titlebar-spacer,.titlebar-buttonbox-container){
+    display: none;
+  }
+  :root[sizemode="fullscreen"] #nav-bar > .titlebar-buttonbox-container{
+    display: flex !important;
+  }
+  :root[tabsintitlebar] #toolbar-menubar:not([autohide="false"]) ~ #nav-bar{
+    > .titlebar-buttonbox-container{
+      display: flex !important;
+    }
+    :root[sizemode="normal"] & {
+      > .titlebar-spacer{
+        display: flex !important;
+      }
+    }
+    :root[sizemode="maximized"] & {
+      > .titlebar-spacer[type="post-tabs"]{
+        display: flex !important;
+      }
+      @media (-moz-bool-pref: "userchrome.force-window-controls-on-left.enabled"),
+        (-moz-gtk-csd-reversed-placement),
+        (-moz-platform: macos){
+        > .titlebar-spacer[type="post-tabs"]{
+          display: none !important;
+        }
+        > .titlebar-spacer[type="pre-tabs"]{
+          display: flex !important;
+        }
+      }
+    }
+  }
+}
+
+/* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/compact_proton.css made available under Mozilla Public License v. 2.0
+See the above repository for updates as well as full license text. */
+
+/* Small changes to make proton roughly as compact as the old compact mode */
+
+:root{
+  --toolbarbutton-inner-padding: 5px !important;
+  --tab-block-margin: 0px !important;
+  --tabs-shadow-size: 0px !important;
+  --arrowpanel-menuitem-padding-block: 5px !important;
+  --panel-font-size: inherit !important;
+  --arrowpanel-padding: 0.8em !important;
+  --inline-tab-padding: 8px !important; /* 8px is default value since it looks good - lower values compactify tabs horizontally */
+  --tab-inline-padding: 8px !important; /* Same as above, but for fx132 */
+}
+.subviewbutton.bookmark-item{ padding-block: 4px !important; }
+.subview-subheader{ display: block }
+menupopup > menuitem,
+menupopup > menu{ padding-block: 0.3em !important; }
+
+/* This is kinda weird, but it makes the horizontal line between tabs and nav-bar render "inside" nav-bar thus tabs are more visibily separated even if there is less space there */
+#nav-bar{
+  box-shadow: inset 0 var(--tabs-shadow-size) 0 var(--lwt-tabs-border-color) !important;
+}
+
+.tab-close-button{
+  margin-inline-start: 0px !important;
+  width: 20px !important;
+  height: 20px !important;
+  padding: 5px !important;
+}
+
+#tabbrowser-tabs{ --uc-tabs-scrollbutton-border: 2px }
+#scrollbutton-up,
+#scrollbutton-down{ border-block-width: var(--uc-tabs-scrollbutton-border,0px) !important; }
+
+/* OPTIONAL - show audio label in compact mode and make the audio icon behavior match non-compact mode */
+/*
+.tab-secondary-label:is([soundplaying], [muted], [activemedia-blocked], [pictureinpicture]){ display: flex !important; margin-bottom: 1px }
+#TabsToolbar:not(:hover) .tab-icon-image{ opacity: 1 !important; }
+#TabsToolbar:not(:hover) .tab-icon-overlay:not([pinned]){ opacity: 0 !important; }
+*/
+
